--- a/khata/src/renderer/src/components/report.css
+++ b/khata/src/renderer/src/components/report.css
@@ -26,7 +26,7 @@
 }
 
 .return-btn {
-  background-color: #000000;
+  background-color: #ffffff;
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 8px 16px;
@@ -36,7 +36,7 @@
 }
 
 .return-btn:hover {
-  background-color: #4b4b4b;
+  background-color: #acacac;
 }
 
 .analytics-filters {
